--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.1.0",
   "license": "MIT",
   "packageManager": "pnpm@7.3.0",
+  "type": "module",
   "scripts": {
     "dev": "nodemon",
     "start": "vercel dev",
+    "deploy": "vercel --prod",
     "type-check": "tsc --noEmit",
-    "format": "prettier --write '{**/*.{ts,json},.prettierrc}'"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "isomorphic-unfetch": "^3.1.0",
